# kBioReg

./: .gitmodules  CMakeLists.txt  README.md
bash_scripts/: run_benchmark.sh  script.sh  simulate.sh
data/: BCOV_S1_CTD_PS51921.fa  COVID_AA.fa  ibf_example.fna  sequences.fasta
include/: arg_parse.h  graphMaker.h  index.h  index_structure.h  korotkov_nfa.h  nfa_pointer.h  query.h  utils.h
src/: CMakeLists.txt  benchmark_main.cpp  graphMaker.cpp  index.cpp  korotkov_nfa.cpp  main.cpp  nfa_pointer.cpp  query.cpp  utils.cpp
test/benchmark/: NucleotideBenchmarkingStrategy.md  initBenchmarking.md
utils/: eval_benchmark.py  toolkit.py  visualization_eval.ipynb
